# pillarlabs_task

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
app/: models.py
app/ai/: plan.py
app/core/: config.py  database.py  deps.py  security.py
app/routers/: annotations.py  auth.py  users.py
app/schemas/: annotation.py  user.py
app/services/: browser.py  browser_session.py  url_validator.py
app/static/css/: styles.css
app/static/js/: annotation.js  session.js
app/templates/: annotation_detail.html  annotation_new.html  annotations.html  base.html  login.html  session.html
migrations/: env.py
migrations/versions/: 2c68c5f5e1c2_initial.py  56510a98773d_seed_test_user.py
tests/: conftest.py  test_auth.py  test_generate_plan.py  test_security.py  test_user.py  test_users.py
