[project]
name = "pillarlabs-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.2",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.42.0",
    "pydantic-settings>=2.13.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.22",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt>=5.0.0",
    "anthropic>=0.86.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-env>=1.6.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.8",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
env = [
    "DATABASE_URL=postgresql+asyncpg://annotation:annotation@localhost:5432/annotation_tool",
]
addopts = "--cov=app --cov-report=term-missing"

[tool.coverage.run]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
skip_empty = true
